...
        Button(onClick = onPlayAgainClick) {
            Text(text = stringResource(id = R.string.play_again).uppercase())
        }
    }
}

const val BOARD_TEST_TAG = "board"
const val CELL_TEST_TAG = "cell"

@Composable
fun Board(ticTacToe: TicTacToe, onCellClick: (Int, Int) -> Unit) {
    Column(
        modifier = Modifier
...
